feat: Implemented an interface for interacting with the application via HTTP.
Refactored AppModule.kt, openapi.json
Added controllers for entities
